--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/about.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/about.html
@@ -16,9 +16,9 @@
 
     {%block contenidoQueCambia %}
 
-    <section class="contenedorCambiante">
+    <section class="contenedorCambiante" id="contendorAbout">
 
-        <h1>Hola, bienvenidos a mi página web</h1>
+        <h2>Hola, bienvenidos a mi página web</h2>
 
         <p>
             Soy Rodrigo Vazquez, tengo 24 años y soy de Buenos Aires, Argentina. <br>
