--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarEstudio.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarEstudio.html
@@ -21,12 +21,12 @@
     <section class="contenedorCambiante">
         <h1>Ingresa los datos para actualizar un estudio</h1>
 
-        <form action="" method="POST">
+        <form action="" method="POST" class="formEstudio">
             {% csrf_token %}
         
             {{form.as_p}}
         
-            <input type="submit" , value="Actualizar">
+            <input type="submit" , value="Actualizar" class="inputsForms">
         </form>
         
   
