--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/editarUsuario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/editarUsuario.html
@@ -18,7 +18,7 @@
 
     <section class="contenedorCambiante">
 
-        <h1>Ingresa los datos para agregar editar tu usario</h1>
+        <h1>Ingresa los nuevos datos para editar tu usario</h1>
 
         {% if form.errors %}
     
@@ -34,7 +34,7 @@
                 {{form.as_table}}
             </table>
     
-            <input type="submit", value="Actualizar">
+            <input type="submit", value="Actualizar" class="inputsForms">
         </form>
 
     </section>
