--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/eliminarEstudio.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/eliminarEstudio.html
@@ -21,11 +21,11 @@
     <section class="contenedorCambiante">
 
 
-        <form action="" method="POST">{% csrf_token %}
+        <form action="" method="POST" class="formEstudio">{% csrf_token %}
 
             <p>¿ Estas seguro de que queres eliminar el estudio: {{object}}?</p>
 
-            <input type="submit" value="borrar" name="" id="">
+            <input type="submit" value="Eliminar" name="" id="" class="inputsForms">
         </form>
   
     </section>
