--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarJuegosPS4Formulario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarJuegosPS4Formulario.html
@@ -18,7 +18,7 @@
 
     <section class="contenedorCambiante">
 
-        <h1>Ingresa los datos para agregar editar tu usario</h1>
+        <h1>Ingresa los datos a editar</h1>
 
         {% if form.errors %}
     
@@ -33,7 +33,7 @@
                 {{ form.as_table }}
             </table>
         
-            <input type="submit" value="Actualizar">
+            <input type="submit" value="Actualizar" class="inputsForms">
         </form>
 
     </section>
