--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/crearEstudios.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/crearEstudios.html
@@ -13,7 +13,7 @@
     {%load static%}
 
     {% block titulo %}
-    Crear Nuevo estudio
+    Crear nuevo estudio
     {%endblock%}
 
     {%block contenidoQueCambia %}
@@ -21,12 +21,12 @@
     <section class="contenedorCambiante">
         <h1>Ingresa los datos para agregar un nuevo estudio</h1>
 
-        <form action="" method="POST">
+        <form action="" method="POST" class="formEstudio">
             {% csrf_token %}
 
             {{form.as_p}}
 
-            <input type="submit" , value="enviar">
+            <input type="submit" , value="Agregar" class="inputsForms">
         </form>
 
 
