--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5Formulario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5Formulario.html
@@ -34,7 +34,7 @@
                 {{form.as_table}}
             </table>
     
-            <input type="submit", value="enviar">
+            <input type="submit", value="Agregar" class="inputsForms">
         </form>
 
     </section>
