--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/login.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/login.html
@@ -32,7 +32,7 @@
     
                 {{form}}
     
-            <button type="submit"> Iniciar Sesion</button>
+            <button type="submit" class="inputsForms"> Iniciar Sesion</button>
     
         </form>
 
